# shift-rest

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 37855cc0df3e_creating_db.py  525999fd6d93_update.py  7de2bc951ab0_.py  8645296f63c7_rebase.py  8be932f47606_not_null_fields.py  eccb31319e35_init_db.py  efd4c7ee4080_rename_fields.py
migrations/: env.py
migrations/versions/: e6b94edf5bfe_user_and_salary.py
src/: config.py  database.py  main.py
src/auth/: dependencies.py  models.py  router.py  schemas.py
src/salary/: dependencies.py  models.py  router.py  schemas.py
utils/: data-generation.py
